--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -4,12 +4,14 @@
   apt:
     name: "{{ item }}"
     state: present
+  become: yes
   with_items:
     - postgresql
     - python3-psycopg2
 
 - name: "Start and enable services"
   service: "name={{ item }} state=started enabled=yes"
+  become: yes
   with_items:
     - postgresql
 
