--- a/clean-site.yml
+++ b/clean-site.yml
@@ -32,3 +32,40 @@
         state: absent
       with_items:
         - haproxy
+
+- name: "Uninstall java"
+  hosts: appservers
+  become: true
+  tasks:
+    - name: "Uninstall Packages"
+      apt:
+        name: "{{ item }}"
+        state: absent
+      with_items:
+        - default-jdk
+        - default-jdk-headless
+        - openjdk-11-jdk-headless
+        - openjdk-11-jre-headless
+        - openjdk-8-jdk
+
+    - name: Change ownership of jetty installation
+      become: yes
+      file: path=/opt/jetty owner=root group=root state=directory recurse=yes
+  
+    - name: "Remove jetty directory"
+      become: yes
+      file: path=/opt/jetty state=absent
+
+- name: "Uninstall java"
+  hosts: all
+  become: true
+  tasks:
+    - name: "Uninstall Packages"
+      apt:
+        name: "{{ item }}"
+        state: absent
+      with_items:
+        - default-jdk
+        - default-jdk-headless
+        - openjdk-11-jdk-headless
+        - openjdk-11-jre-headless
